# django-crashlog

./: .gitignore  LICENSE  README.md  pyproject.toml  runtests.py
.github/workflows/: release.yml  test-pypi.yml
playground/config/: settings.py
src/django_crashlog/migrations/: 0001_initial.py
