[project]
name = "django-stacktrace"
version = "0.2.2"
description = "A reusable Django app that captures exceptions with request context and stores them in the database, similar to a lightweight Sentry"
readme = "README.md"
authors = [
    { name = "Marsel Beqiri", email = "marselbeqiri.365@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.13",
]

[tool.uv.workspace]
members = [
    "playground",
    ".",
]
